tests/resource/valid/class/print_types_double_nested.mamba
class Y(def a: Float)

class X
    def y: Y

    def init(self, a: Float) =>
         self.y := Y(a)

def x := X(10)

print(x.y.a)
