tests/resource/invalid/type/class/access_unassigned_class_var.mamba
class X
    def init(self) =>
        print(self.z)
